# deltatau-audit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.yml  evaluate.py  generate_paper.py  pyproject.toml  requirements.txt  run_ablation.py  run_episode_dynamics.py  run_experiment.py  run_hard_chain.py  run_speed_generalization.py  run_switch_training.py  train.py
.github/workflows/: audit-smoke.yml  release.yml
configs/: default.yaml
deltatau_audit/: __init__.py  __main__.py  auditor.py  badge.py  callback.py  ci.py  cli.py  color.py  diagnose.py  diff.py  fixer.py  fixer_cleanrl.py  metrics.py  tracker.py
deltatau_audit/adapters/: __init__.py  base.py  cleanrl.py  generic.py  internal_time.py  sb3.py  sb3_recurrent.py  simple_gru.py  torch_policy.py
deltatau_audit/demo_data/cartpole/: baseline.pt  robust_wide.pt
deltatau_audit/report/: __init__.py  generator.py
deltatau_audit/wrappers/: __init__.py  latency.py  speed.py
demo_external_env/: run_audit.py  train.py
demo_external_env/checkpoints/baseline/: history.json
demo_external_env/checkpoints/robust/: final.pt  history.json
docs/: index.html  reddit_posts.md  show_hn.md  twitter_thread.md
docs/sample/: comparison.md
docs/sample/cartpole_after/: index.html  summary.json
docs/sample/cartpole_before/: index.html  summary.json
docs/sample/halfcheetah/: ci_summary.json  ci_summary.md  index.html  summary.json
docs/sample/halfcheetah_after/: index.html  summary.json
docs/sample/halfcheetah_before/: index.html  summary.json
examples/: audit_before_after.py  audit_cleanrl.py  audit_halfcheetah.py  fix_cartpole.py  isaaclab_skeleton.py  train_robust_halfcheetah.py  validate_mujoco.py
internal_time_rl/: __init__.py
internal_time_rl/algorithms/: __init__.py  ppo_self_model.py  ppo_time.py  ppo_time_v2.py
internal_time_rl/analysis/: __init__.py  paper_figures.py  speed_analysis.py  training_curves.py  visualize.py
internal_time_rl/envs/: __init__.py  delayed_reward_chain.py  flickering_env.py  tmaze.py  variable_frequency.py
internal_time_rl/models/: __init__.py  agent_v2.py  baselines.py  encoder.py  policy.py  self_model.py  time_module.py
notebooks/: quickstart.ipynb
scripts/: make_paper.sh
tests/: conftest.py  test_adapters.py  test_auditor.py  test_bootstrap.py  test_ci.py  test_cleanrl_adapter.py  test_cli.py  test_diff.py  test_fixer.py  test_metrics.py  test_quality_fixes.py  test_report.py  test_sb3_adapter.py  test_torch_policy_adapter.py  test_v046.py  test_v047.py  test_v048.py  test_v049.py  test_v050.py  test_v051.py  test_v052.py  test_v053.py  test_v054.py  test_v055.py  test_v057.py  test_v061_callback.py  test_v062_badge.py  test_wrappers.py
