[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deltatau-audit"
version = "0.5.5"
description = "Time Robustness Audit for RL agents — measures timing reliance, deployment robustness, and stress resilience"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "maruyamakoju" },
]
keywords = ["reinforcement-learning", "robustness", "audit", "timing", "rl", "mujoco", "stable-baselines3", "deployment", "gymnasium", "testing", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "gymnasium>=0.29",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.60",
]

[project.urls]
Homepage = "https://github.com/maruyamakoju/deltatau-audit"
Repository = "https://github.com/maruyamakoju/deltatau-audit"
Documentation = "https://maruyamakoju.github.io/deltatau-audit/"
Issues = "https://github.com/maruyamakoju/deltatau-audit/issues"
Changelog = "https://github.com/maruyamakoju/deltatau-audit/blob/main/CHANGELOG.md"
"Sample Reports" = "https://maruyamakoju.github.io/deltatau-audit/"
"Models & Reports" = "https://github.com/maruyamakoju/deltatau-audit/releases/tag/assets"

[project.optional-dependencies]
demo = ["gymnasium[classic-control]>=0.29"]
sb3 = ["stable-baselines3>=2.0", "sb3-contrib>=2.0"]
hf = ["huggingface_hub>=0.16", "stable-baselines3>=2.0"]
mujoco = ["gymnasium[mujoco]>=1.0"]
wandb = ["wandb>=0.12"]
mlflow = ["mlflow>=2.0"]
dev = ["pytest>=7.0", "mypy>=1.0"]

[project.scripts]
deltatau-audit = "deltatau_audit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deltatau_audit*"]

[tool.setuptools.package-data]
deltatau_audit = ["demo_data/**/*.pt", "py.typed"]

[tool.mypy]
ignore_missing_imports = true
no_namespace_packages = true
follow_imports = "skip"
# Suppress errors from third-party stubs in the environment
exclude = ["rdkit"]

[[tool.mypy.overrides]]
module = ["rdkit.*", "stable_baselines3.*", "gymnasium.*", "sb3_contrib.*"]
ignore_errors = true
